--- a/form.html
+++ b/form.html
@@ -12,10 +12,10 @@
 	<body>
 		<br><br><br><br>
 		<h1>Recall Registry Formatter</h1>
-		<p style="color:green"> Upload ".xls" file from Recall Registry</label>
+		<p style="color:green"> Upload files with ".xls" from SDIR Recall Registry & ".csv" from NG MRN</p>
 		<form action="fileupload" method="post" enctype="multipart/form-data">
-			SDIR file: <input type="file" name="sdirfile" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"><br><br>		
-			NG file: <input type="file" name="ngfile" accept=".csv"><br><br>
+			SDIR file (.xls): <input type="file" name="sdirfile" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"><br><br>		
+			NG file (.csv): <input type="file" name="ngfile" accept=".csv"><br><br>
 			<input type="submit" value="Process & Download">
 		</form>
 	</body>
